<resources>
    <string name="app_name">Boa viagem</string>
    <string name="lazer">Lazer</string>
    <string name="business">Business</string>
    <string name="trip_detour">Trip detour</string>
    <string name="accomodation">Accomodation</string>
    <string name="reason_for_travel">Reason for travel</string>
    <string name="date_checkin">Arrival date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="departure_date">Departure date</string>
    <string name="add_travel">New travel</string>
    <string name="save_travel">Save travel</string>
    <string name="expense_description">Expense description</string>
    <string name="expense_cost">Expense cost</string>
    <string name="payment_method">Payment method</string>
    <string name="date_spent">Date spent</string>
    <string name="save_expense">Save expense</string>
</resources>
