<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:padding="@dimen/geral_16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/geral_5dp">

        <EditText
            android:id="@+id/input_trip_detour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_detour" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reason_for_travel"
        android:layout_margin="@dimen/geral_5dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/geral_5dp">

        <RadioButton
            android:id="@+id/radio_lazer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lazer" />

        <RadioButton
            android:id="@+id/radio_negocios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/business" />
    </RadioGroup>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/geral_5dp">

        <EditText
            android:id="@+id/input_accomodation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/accomodation" />

    </android.support.design.widget.TextInputLayout>

    <include
        layout="@layout/arrive_departure_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>