<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/geral_16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Belo Horizonte"
        android:textSize="24sp"
        android:layout_marginBottom="@dimen/geral_5dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_expense_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_description" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_trip_detour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_cost" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_method" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_arrival_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_spent"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_save_expense"
        android:layout_margin="@dimen/geral_5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_expense"/>

</LinearLayout>